# auto-wattering

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  watering.uf2
.cargo/: config.toml
src/: channels.rs  config.rs  main.rs  types.rs
src/tasks/: display.rs  logger.rs  mod.rs  network.rs  pump.rs  sensor.rs
