[package]
name = "watering-embassy"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt", "tcp", "udp", "dns", "dhcpv4"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "1f945bcebd3b0018b3b5541ede767583df3545d8", features = ["defmt"] }
log = "0.4"
reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "0b529c4fa0d8f568427a493fe53dfc384f7640b1", features = ["defmt", "embedded-tls"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
fixed = "1.23.1"

# OLED display
ssd1306 = { version = "0.10", features = ["async"] }
embedded-graphics = "0.8"
embedded-hal-async = "1.0"

# BME280 sensor
bme280-rs = "0.2"

# Utilities
heapless = { version = "0.8", features = ["serde"] }

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
lto = true
opt-level = "z"
